--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "peerDependencies": {
     "react": "^16.7.0-alpha.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test && npm run format:fix && npm run lint"
+    }
+  },
   "devDependencies": {
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
