--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "./node_modules/eslint/bin/eslint.js --ext js,jsx src",
     "lint-fix": "./node_modules/eslint/bin/eslint.js --ext js,jsx src --fix",
     "format:check": "prettier --config ./.prettierrc --list-different \"src/**/*{.ts,.js,.json,.css,.scss}\"",
-    "format:fix": "pretty-quick --staged"
+    "format:fix": "pretty-quick --staged",
+    "build": "tsc"
   },
   "peerDependencies": {
     "react": "^16.7.0-alpha.0"
@@ -34,7 +35,11 @@
     "jest": "^23.6.0",
     "prettier": "1.14.3",
     "pretty-quick": "^1.8.0",
-    "react": "^16.7.0-alpha.0"
+    "react": "^16.7.0-alpha.0",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
+    "@types/jest": "^26.0.19"
   },
   "engines": {
     "node": ">=8",
