Added the index.d.ts file to packagejson files

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^16.7.0-alpha.0"
   },
   "files": [
-    "src/index.js"
+    "src/index.js",
+    "src/index.d.ts"
   ],
   "husky": {
     "hooks": {
