--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "strict": true,
     "removeComments": false,
     "declaration": true,
-    "outDir": "./src"
+    "outDir": "build"
   },
-  "include": ["ts", "ts/index.ts"],
+  "include": ["src", "src/index.ts"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
