--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "use-mobile-detect-hook",
   "version": "1.0.3",
   "description": "The React hook to detect if the device is mobile or desktop.",
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
-    "test": "jest --coverage",
-    "test-watch": "jest --watchAll --coverage",
+    "test": "npm run build && jest --coverage",
+    "test-watch": "npm run build && jest --watchAll --coverage",
     "lint": "./node_modules/eslint/bin/eslint.js --ext js,jsx src",
     "lint-fix": "./node_modules/eslint/bin/eslint.js --ext js,jsx src --fix",
     "format:check": "prettier --config ./.prettierrc --list-different \"src/**/*{.ts,.js,.json,.css,.scss}\"",
@@ -17,8 +17,8 @@
     "react": "^16.7.0-alpha.0"
   },
   "files": [
-    "src/index.js",
-    "src/index.d.ts"
+    "build/index.js",
+    "build/index.d.ts"
   ],
   "husky": {
     "hooks": {
@@ -57,5 +57,6 @@
     "type"
   ],
   "author": "haldarmahesh",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
