--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "use-mobile-detect-hook",
   "version": "1.0.4",
   "description": "The React hook to detect if the device is mobile or desktop.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/haldarmahesh/use-mobile-detect-hook.git"
+  },
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
